# TOM-a-Tiny-Optimization-Module-for-Robotics-Problems

./: CMakeLists.txt  README.md  note.md
optim/: optim.h
optim/core/: edge.cc  edge.h  eigen_types.h  linear_solver.cc  linear_solver.h  loss_function.cc  loss_function.h  problem.cc  problem.h  problem_base.cc  problem_base.h  vertex.h
optim/edge/: edge_direct_method.cc  edge_direct_method.h  edge_name.cc  edge_prior.cc  edge_prior.h  edge_reprojection.cc  edge_reprojection.h
optim/problem/: problem_dense.cc  problem_dense.h  problem_sparse_vo.h
optim/util/: tic_toc.h
optim/vertex/: vertex_inverse_depth.h  vertex_name.cc  vertex_point_xyz.h  vertex_pose.cc  vertex_pose.h
test/: PNP_test.cc
